--- a/fishingcss.css
+++ b/fishingcss.css
@@ -1,19 +1,16 @@
 #map{
-  height:400px;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  height:450px;
+  width: 100%;
 }
 #header{
   font-size: 64px;
   color: black;
   margin-bottom: 50px;
   text-align: center;
+
 }
-#leftText{
-  text-align:left;
-  max-width: 50px;
-}
+
 body{
-  background-color: gray;
+  background-image: url("https://www.barrierreef.org/generated/picture-large/layer-9-jpg.jpg?1468214103");
+  background-repeat: no-repeat;
 }
